--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
+  http: ^0.13.4
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
